@startuml

package galaxy_sim.actors{
  class CelestialBodyActor << object >>
  class SimulationManagerActor << object >>
}

package physics.rigidbody.RigidBody {
  class CircularEntity << trait >>
}

package galaxy_sim.model {
  class Simulation {
    + deltaTime
    + virtualTime
  }
  class CelestialBody extends CircularEntity
  class Boundary << trait >>
  enum CelestialBodyType
}

Simulation "1"*--"*" CelestialBody
Simulation ..> CelestialBodyType
Simulation "1"*--"1" Boundary
CelestialBody "*"--"1" CelestialBodyType

CelestialBodyActor "1"-->"1" CelestialBody: use
SimulationManagerActor "1"-->"1" Simulation: use

@enduml